[gd_scene load_steps=29 format=3 uid="uid://dag66grdq6o78"]

[ext_resource type="Script" path="res://Scripts/Enemies/enemy_ranged.gd" id="1_6vlhb"]
[ext_resource type="PackedScene" uid="uid://cag6br1vm13bt" path="res://Scenes/Objects/Enemies/enemy_bullet.tscn" id="2_ygtta"]
[ext_resource type="Texture2D" uid="uid://dc1daxhsfw0t7" path="res://Assets/Visual/Sheets/EnemySheet.png" id="3_22m7x"]
[ext_resource type="Script" path="res://addons/Souperior 2D Skeleton Modifications/Animatinators/soup_stack.gd" id="4_c1b0v"]
[ext_resource type="Texture2D" uid="uid://bmga4s03k0iee" path="res://Assets/Visual/Sheets/EnemyGlow.png" id="4_rlegu"]
[ext_resource type="Script" path="res://addons/Souperior 2D Skeleton Modifications/Animatinators/Modifications/soup_fabrik.gd" id="5_625r5"]
[ext_resource type="Texture2D" uid="uid://mq1tfdsrwgu7" path="res://Assets/Visual/Particles/sParticleDrop.png" id="5_fwdtw"]
[ext_resource type="Script" path="res://addons/Souperior 2D Skeleton Modifications/Animatinators/Modifications/soup_look_at.gd" id="6_n88fu"]
[ext_resource type="Script" path="res://Scripts/dot_movement_.gd" id="7_22lyy"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="8_308yn"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="9_32krq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="10_gy38q"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="11_c6xk3"]
[ext_resource type="Script" path="res://Scripts/Components/hitbox_component.gd" id="12_c1xv6"]
[ext_resource type="Script" path="res://Scripts/Components/resists.gd" id="13_6jj3s"]
[ext_resource type="Script" path="res://Scripts/Components/health_component.gd" id="14_gjsna"]
[ext_resource type="Script" path="res://Scripts/Components/knockback_component.gd" id="15_it07q"]
[ext_resource type="Script" path="res://Scripts/Components/enemy_death_component.gd" id="16_oyp74"]
[ext_resource type="Script" path="res://Scripts/Components/drop_spawner.gd" id="17_rnwj7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1qg1u"]
radius = 7.07107

[sub_resource type="Animation" id="Animation_webby"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Body/Jaw1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Body/Jaw2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/Body/Gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/Body:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SPRITES/Gun/GunGlow:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.341176, 0.341176, 0.341176, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SPRITES/Gun/GPUParticles2D:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qp32u"]
resource_name = "Shoot"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Body/Jaw1:rotation")
tracks/0/interp = 3
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -1.309, -1.309, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Body/Jaw2:rotation")
tracks/1/interp = 3
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.309, 1.309, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/Body/Gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-2, 0), Vector2(3, 0), Vector2(0, 0), Vector2(3, 0), Vector2(-2, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton2D/Body:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(-5, 0), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SPRITES/Gun/GunGlow:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 1.2, 2),
"transitions": PackedFloat32Array(3.24902, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.341176, 0.341176, 0.341176, 1), Color(3, 2, 2, 1), Color(12, 7, 7, 1), Color(1, 1, 1, 1), Color(0.341176, 0.341176, 0.341176, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SPRITES/Gun/GPUParticles2D:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gg7ia"]
_data = {
"RESET": SubResource("Animation_webby"),
"Shoot": SubResource("Animation_qp32u")
}

[sub_resource type="Gradient" id="Gradient_edvs3"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.0443548, 0.33871, 0.354839, 0.459677, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 0, 0.0166664, 1, 0.491076, 0.00100074, 0.0606154, 0.367385, 0.275596, 0.000226554, 0.04051, 0.0887658, 0.212338, 7.53547e-06, 0.0318254, 0.00321471, 0.21, 0, 0.0314999, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_f02fm"]
gradient = SubResource("Gradient_edvs3")
use_hdr = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rk8p0"]
particle_flag_align_y = true
particle_flag_disable_z = true
initial_velocity_min = 100.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
damping_min = 200.0
damping_max = 200.0
color = Color(3, 3, 3, 1)
color_ramp = SubResource("GradientTexture1D_f02fm")

[sub_resource type="Resource" id="Resource_kjcer"]
script = ExtResource("13_6jj3s")
armor = 0.0
coefficient_of_knockback = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mgcdd"]
radius = 9.0

[node name="RangedEnemy" type="CharacterBody2D" node_paths=PackedStringArray("bullet_place")]
use_parent_material = true
collision_layer = 2
script = ExtResource("1_6vlhb")
speed = 40.0
bullet = ExtResource("2_ygtta")
bullet_place = NodePath("VISUAL/Skeleton2D/Body/Gun/BulletSpawn")
bullet_speed = 150.0

[node name="GeometryCollider" type="CollisionShape2D" parent="."]
use_parent_material = true
shape = SubResource("CircleShape2D_1qg1u")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="VISUAL" type="Node2D" parent="."]
use_parent_material = true
position = Vector2(-1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="VISUAL"]
libraries = {
"": SubResource("AnimationLibrary_gg7ia")
}

[node name="SPRITES" type="Node2D" parent="VISUAL"]
use_parent_material = true
position = Vector2(-1, 0)

[node name="FootR" type="Sprite2D" parent="VISUAL/SPRITES"]
use_parent_material = true
position = Vector2(10.02, 11.0242)
rotation = 1.75615
scale = Vector2(0.999999, 0.999999)
texture = ExtResource("3_22m7x")
centered = false
region_enabled = true
region_rect = Rect2(21, 8, 11, 10)

[node name="LegR1" type="Sprite2D" parent="VISUAL/SPRITES"]
use_parent_material = true
position = Vector2(11.5724, 5.17588)
rotation = 2.78494
texture = ExtResource("3_22m7x")
centered = false
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(33, 18, 15, 3)

[node name="LegR2" type="Sprite2D" parent="VISUAL/SPRITES"]
use_parent_material = true
position = Vector2(-1.77525, 3.97313)
rotation = 0.89632
scale = Vector2(0.999999, 0.999999)
texture = ExtResource("3_22m7x")
centered = false
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(33, 22, 15, 5)

[node name="FootL" type="Sprite2D" parent="VISUAL/SPRITES"]
use_parent_material = true
position = Vector2(0.191406, -9.18134)
rotation = -1.75614
scale = Vector2(0.999999, 0.999999)
texture = ExtResource("3_22m7x")
centered = false
region_enabled = true
region_rect = Rect2(21, 8, 11, 10)

[node name="LegL1" type="Sprite2D" parent="VISUAL/SPRITES"]
use_parent_material = true
position = Vector2(10.1759, -1.42758)
rotation = -2.78494
texture = ExtResource("3_22m7x")
centered = false
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(33, 18, 15, 3)

[node name="LegL2" type="Sprite2D" parent="VISUAL/SPRITES"]
use_parent_material = true
position = Vector2(-6.4614, -7.71999)
rotation = -0.896326
scale = Vector2(0.999999, 0.999999)
texture = ExtResource("3_22m7x")
centered = false
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(33, 22, 15, 5)

[node name="FootB" type="Sprite2D" parent="VISUAL/SPRITES"]
use_parent_material = true
position = Vector2(-7, 5)
rotation = -3.14159
scale = Vector2(1, 1)
texture = ExtResource("3_22m7x")
centered = false
region_enabled = true
region_rect = Rect2(21, 8, 11, 10)

[node name="LegB1" type="Sprite2D" parent="VISUAL/SPRITES"]
use_parent_material = true
position = Vector2(4.47675, 2.78796)
rotation = -2.52556
texture = ExtResource("3_22m7x")
centered = false
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(33, 18, 15, 3)

[node name="LegB2" type="Sprite2D" parent="VISUAL/SPRITES"]
use_parent_material = true
position = Vector2(-1.55226, -6.85196)
rotation = 2.37545
scale = Vector2(1, 1)
texture = ExtResource("3_22m7x")
centered = false
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(33, 22, 15, 5)

[node name="Gun" type="Sprite2D" parent="VISUAL/SPRITES"]
use_parent_material = true
position = Vector2(4, -3)
texture = ExtResource("3_22m7x")
centered = false
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(21, 2, 9, 5)

[node name="GunGlow" type="Sprite2D" parent="VISUAL/SPRITES/Gun"]
modulate = Color(0.341176, 0.341176, 0.341176, 1)
use_parent_material = true
position = Vector2(5, 0)
texture = ExtResource("4_rlegu")
centered = false
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(6, 0, 4, 5)

[node name="GPUParticles2D" type="GPUParticles2D" parent="VISUAL/SPRITES/Gun"]
use_parent_material = true
position = Vector2(7.5, 3)
emitting = false
process_material = SubResource("ParticleProcessMaterial_rk8p0")
texture = ExtResource("5_fwdtw")
lifetime = 0.5
one_shot = true
explosiveness = 0.86

[node name="Jaw1" type="Sprite2D" parent="VISUAL/SPRITES"]
use_parent_material = true
position = Vector2(9, -6)
texture = ExtResource("3_22m7x")
centered = false
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(11, 1, 9, 7)

[node name="Jaw2" type="Sprite2D" parent="VISUAL/SPRITES"]
use_parent_material = true
position = Vector2(9, -2)
texture = ExtResource("3_22m7x")
centered = false
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(11, 9, 9, 7)

[node name="Body" type="Sprite2D" parent="VISUAL/SPRITES"]
use_parent_material = true
position = Vector2(2, -6)
texture = ExtResource("3_22m7x")
centered = false
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(1, 1, 9, 11)

[node name="BodyGlow" type="Sprite2D" parent="VISUAL/SPRITES/Body"]
modulate = Color(2, 1, 1, 1)
use_parent_material = true
position = Vector2(1, 1)
texture = ExtResource("4_rlegu")
centered = false
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(0, 0, 6, 8)

[node name="Skeleton2D" type="Skeleton2D" parent="VISUAL"]
use_parent_material = true
position = Vector2(6, 0)

[node name="SoupStack" type="Node" parent="VISUAL/Skeleton2D"]
script = ExtResource("4_c1b0v")

[node name="BFABRIK" type="Node" parent="VISUAL/Skeleton2D/SoupStack" node_paths=PackedStringArray("target_node", "bone_nodes")]
script = ExtResource("5_625r5")
target_node = NodePath("../../../TARGETS/DB")
enabled = true
bone_nodes = [NodePath("../../Body/LegB1"), NodePath("../../Body/LegB1/LegB2")]

[node name="LFABRIK" type="Node" parent="VISUAL/Skeleton2D/SoupStack" node_paths=PackedStringArray("target_node", "bone_nodes")]
script = ExtResource("5_625r5")
target_node = NodePath("../../../TARGETS/DL")
enabled = true
bone_nodes = [NodePath("../../Body/LegL1"), NodePath("../../Body/LegL1/LegL2")]

[node name="RFABRIK" type="Node" parent="VISUAL/Skeleton2D/SoupStack" node_paths=PackedStringArray("target_node", "bone_nodes")]
script = ExtResource("5_625r5")
target_node = NodePath("../../../TARGETS/DR")
enabled = true
bone_nodes = [NodePath("../../Body/LegR1"), NodePath("../../Body/LegR1/LegR2")]

[node name="BLookAt" type="Node" parent="VISUAL/Skeleton2D/SoupStack" node_paths=PackedStringArray("target_node", "bone_node")]
script = ExtResource("6_n88fu")
target_node = NodePath("../../Body")
enabled = true
bone_node = NodePath("../../Body/LegB1/LegB2/FootB")

[node name="LLookAt" type="Node" parent="VISUAL/Skeleton2D/SoupStack" node_paths=PackedStringArray("target_node", "bone_node")]
script = ExtResource("6_n88fu")
target_node = NodePath("../../Body")
enabled = true
bone_node = NodePath("../../Body/LegL1/LegL2/FootL")

[node name="RLookAt" type="Node" parent="VISUAL/Skeleton2D/SoupStack" node_paths=PackedStringArray("target_node", "bone_node")]
script = ExtResource("6_n88fu")
target_node = NodePath("../../Body")
enabled = true
bone_node = NodePath("../../Body/LegR1/LegR2/FootR")

[node name="Body" type="Bone2D" parent="VISUAL/Skeleton2D"]
use_parent_material = true
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="BodyRT" type="RemoteTransform2D" parent="VISUAL/Skeleton2D/Body"]
use_parent_material = true
position = Vector2(-5, -6)
remote_path = NodePath("../../../SPRITES/Body")

[node name="Jaw1" type="Bone2D" parent="VISUAL/Skeleton2D/Body"]
use_parent_material = true
position = Vector2(2, -2)
rest = Transform2D(1, 0, 0, 1, 2, -2)
auto_calculate_length_and_angle = false
length = 8.0
bone_angle = 0.0

[node name="Jaw1RT" type="RemoteTransform2D" parent="VISUAL/Skeleton2D/Body/Jaw1"]
use_parent_material = true
position = Vector2(0, -4)
remote_path = NodePath("../../../../SPRITES/Jaw1")

[node name="Jaw2" type="Bone2D" parent="VISUAL/Skeleton2D/Body"]
use_parent_material = true
position = Vector2(2, 2)
rest = Transform2D(1, 0, 0, 1, 2, 2)
auto_calculate_length_and_angle = false
length = 8.0
bone_angle = 0.0

[node name="Jaw2RT" type="RemoteTransform2D" parent="VISUAL/Skeleton2D/Body/Jaw2"]
use_parent_material = true
position = Vector2(0, -4)
remote_path = NodePath("../../../../SPRITES/Jaw2")

[node name="Gun" type="Bone2D" parent="VISUAL/Skeleton2D/Body"]
use_parent_material = true
position = Vector2(-2, 0)
rest = Transform2D(1, 0, 0, 1, -2, 0)
auto_calculate_length_and_angle = false
length = 8.0
bone_angle = 0.0

[node name="GunRT" type="RemoteTransform2D" parent="VISUAL/Skeleton2D/Body/Gun"]
use_parent_material = true
position = Vector2(-1, -3)
remote_path = NodePath("../../../../SPRITES/Gun")

[node name="BulletSpawn" type="Marker2D" parent="VISUAL/Skeleton2D/Body/Gun"]
use_parent_material = true
position = Vector2(7, 0)

[node name="LegB1" type="Bone2D" parent="VISUAL/Skeleton2D/Body"]
use_parent_material = true
position = Vector2(-3, 0)
rotation = 0.616034
rest = Transform2D(1, 0, 0, 1, -3, 0)

[node name="LegB1RT" type="RemoteTransform2D" parent="VISUAL/Skeleton2D/Body/LegB1"]
use_parent_material = true
position = Vector2(2, 2)
rotation = 3.14159
remote_path = NodePath("../../../../SPRITES/LegB1")

[node name="LegB2" type="Bone2D" parent="VISUAL/Skeleton2D/Body/LegB1"]
use_parent_material = true
position = Vector2(-12, 0)
rotation = -1.38218
scale = Vector2(1, 1)
rest = Transform2D(1, 0, 0, 1, -12, 0)

[node name="LegB2RT" type="RemoteTransform2D" parent="VISUAL/Skeleton2D/Body/LegB1/LegB2"]
use_parent_material = true
position = Vector2(3, 3)
rotation = -3.14159
remote_path = NodePath("../../../../../SPRITES/LegB2")

[node name="FootB" type="Bone2D" parent="VISUAL/Skeleton2D/Body/LegB1/LegB2"]
use_parent_material = true
position = Vector2(-10, 0)
rotation = 0.766146
scale = Vector2(1, 1)
rest = Transform2D(1, 0, 0, 1, -10, 0)
auto_calculate_length_and_angle = false
length = 2.0
bone_angle = 0.0

[node name="FootBRT" type="RemoteTransform2D" parent="VISUAL/Skeleton2D/Body/LegB1/LegB2/FootB"]
use_parent_material = true
position = Vector2(6, 5)
rotation = -3.14159
remote_path = NodePath("../../../../../../SPRITES/FootB")

[node name="LegL1" type="Bone2D" parent="VISUAL/Skeleton2D/Body"]
use_parent_material = true
position = Vector2(2, -4)
rotation = 0.35665
rest = Transform2D(2.22127e-06, 1, -1, 2.22127e-06, 2, -4)

[node name="LegL1RT" type="RemoteTransform2D" parent="VISUAL/Skeleton2D/Body/LegL1"]
use_parent_material = true
position = Vector2(2, 2)
rotation = -3.14159
remote_path = NodePath("../../../../SPRITES/LegL1")

[node name="LegL2" type="Bone2D" parent="VISUAL/Skeleton2D/Body/LegL1"]
use_parent_material = true
position = Vector2(-12, 0)
rotation = 1.88862
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(1, 0, 0, 1, -12, 0)

[node name="LegL2RT" type="RemoteTransform2D" parent="VISUAL/Skeleton2D/Body/LegL1/LegL2"]
use_parent_material = true
position = Vector2(2.99999, 2.99998)
rotation = 3.14159
remote_path = NodePath("../../../../../SPRITES/LegL2")

[node name="FootL" type="Bone2D" parent="VISUAL/Skeleton2D/Body/LegL1/LegL2"]
use_parent_material = true
position = Vector2(-10, 0)
rotation = -0.859822
rest = Transform2D(1, 0, 0, 1, -10, 0)
auto_calculate_length_and_angle = false
length = 2.0
bone_angle = 0.0

[node name="FootLRT" type="RemoteTransform2D" parent="VISUAL/Skeleton2D/Body/LegL1/LegL2/FootL"]
use_parent_material = true
position = Vector2(5.99999, 4.99996)
rotation = -3.14159
remote_path = NodePath("../../../../../../SPRITES/FootL")

[node name="LegR1" type="Bone2D" parent="VISUAL/Skeleton2D/Body"]
use_parent_material = true
position = Vector2(2, 4)
rotation = -0.35665
rest = Transform2D(-6.6638e-06, -1, 1, -6.6638e-06, 2, 4)

[node name="LegR1RT" type="RemoteTransform2D" parent="VISUAL/Skeleton2D/Body/LegR1"]
use_parent_material = true
position = Vector2(1.99999, 2.00001)
rotation = 3.14159
remote_path = NodePath("../../../../SPRITES/LegR1")

[node name="LegR2" type="Bone2D" parent="VISUAL/Skeleton2D/Body/LegR1"]
use_parent_material = true
position = Vector2(-12, 0)
rotation = -1.88862
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(1, 0, 0, 1, -12, 0)

[node name="LegR2RT" type="RemoteTransform2D" parent="VISUAL/Skeleton2D/Body/LegR1/LegR2"]
use_parent_material = true
position = Vector2(2.99998, 2.99994)
rotation = 3.14159
remote_path = NodePath("../../../../../SPRITES/LegR2")

[node name="FootR" type="Bone2D" parent="VISUAL/Skeleton2D/Body/LegR1/LegR2"]
use_parent_material = true
position = Vector2(-10, 0)
rotation = 0.859822
rest = Transform2D(1, 0, 0, 1, -10, 0)
auto_calculate_length_and_angle = false
length = 2.0
bone_angle = 0.0

[node name="FootRRT" type="RemoteTransform2D" parent="VISUAL/Skeleton2D/Body/LegR1/LegR2/FootR"]
use_parent_material = true
position = Vector2(5.99997, 4.99989)
rotation = -3.14159
remote_path = NodePath("../../../../../../SPRITES/FootR")

[node name="TB" type="RayCast2D" parent="VISUAL"]
use_parent_material = true
position = Vector2(1, 0)
target_position = Vector2(-15, 0)

[node name="TL" type="RayCast2D" parent="VISUAL"]
use_parent_material = true
position = Vector2(1, 0)
target_position = Vector2(2, -16)

[node name="TR" type="RayCast2D" parent="VISUAL"]
use_parent_material = true
position = Vector2(1, 0)
target_position = Vector2(2, 16)

[node name="TARGETS" type="Node" parent="VISUAL"]

[node name="DB" type="Node2D" parent="VISUAL/TARGETS" node_paths=PackedStringArray("target", "required_points")]
use_parent_material = true
position = Vector2(-15, 0)
script = ExtResource("7_22lyy")
target = NodePath("../../TB")
foot_size = 4.0
trigger_distance = 10.0
hard_limit = 12.0
rest_trigger_distance = 2.0
linear_speed = 80.0
required_points = [NodePath("../DL")]

[node name="DL" type="Node2D" parent="VISUAL/TARGETS" node_paths=PackedStringArray("target", "required_points")]
use_parent_material = true
position = Vector2(2, -16)
script = ExtResource("7_22lyy")
target = NodePath("../../TL")
foot_size = 4.0
trigger_distance = 10.0
hard_limit = 12.0
rest_trigger_distance = 2.0
linear_speed = 80.0
required_points = [NodePath("../DR")]

[node name="DR" type="Node2D" parent="VISUAL/TARGETS" node_paths=PackedStringArray("target", "required_points")]
use_parent_material = true
position = Vector2(2, 16)
script = ExtResource("7_22lyy")
target = NodePath("../../TR")
foot_size = 4.0
trigger_distance = 10.0
hard_limit = 12.0
rest_trigger_distance = 2.0
linear_speed = 80.0
required_points = [NodePath("../DB")]

[node name="StateChart" type="Node" parent="."]
script = ExtResource("8_308yn")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("9_32krq")
initial_state = NodePath("Pursuit")

[node name="Pursuit" type="Node" parent="StateChart/Root"]
script = ExtResource("10_gy38q")

[node name="To Attack" type="Node" parent="StateChart/Root/Pursuit"]
script = ExtResource("11_c6xk3")
to = NodePath("../../Attack")
event = &"see_the_player"

[node name="Attack" type="Node" parent="StateChart/Root"]
script = ExtResource("10_gy38q")

[node name="To Pursuit" type="Node" parent="StateChart/Root/Attack"]
script = ExtResource("11_c6xk3")
to = NodePath("../../Pursuit")
delay_seconds = 2.0

[node name="COMBAT" type="Node2D" parent="."]
use_parent_material = true

[node name="HitboxComponent" type="Area2D" parent="COMBAT" node_paths=PackedStringArray("health_component", "knockback_component", "timer")]
use_parent_material = true
position = Vector2(6, 0)
collision_layer = 8
collision_mask = 0
script = ExtResource("12_c1xv6")
health_component = NodePath("../HealthComponent")
knockback_component = NodePath("../KnockbackComponent")
resists = SubResource("Resource_kjcer")
timer = NodePath("InvincibilityTimer")

[node name="InvincibilityTimer" type="Timer" parent="COMBAT/HitboxComponent"]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="HitboxCollider" type="CollisionShape2D" parent="COMBAT/HitboxComponent"]
use_parent_material = true
position = Vector2(-4, 0)
shape = SubResource("CircleShape2D_mgcdd")
debug_color = Color(0.964706, 0, 0.498039, 0.419608)

[node name="HealthComponent" type="Node" parent="COMBAT"]
script = ExtResource("14_gjsna")
max_health = 2.0

[node name="KnockbackComponent" type="Node" parent="COMBAT" node_paths=PackedStringArray("target")]
script = ExtResource("15_it07q")
target = NodePath("../..")

[node name="EnemyDeathComponent" type="Node" parent="COMBAT" node_paths=PackedStringArray("health_component", "target", "drop_spawner")]
script = ExtResource("16_oyp74")
health_component = NodePath("../HealthComponent")
target = NodePath("../..")
drop_spawner = NodePath("../DropSpawner")

[node name="DropSpawner" type="Node2D" parent="COMBAT"]
use_parent_material = true
script = ExtResource("17_rnwj7")
drop_velocity = 512

[node name="MOTION" type="Node2D" parent="."]
use_parent_material = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="MOTION"]
avoidance_enabled = true
radius = 8.0
avoidance_layers = 2
avoidance_mask = 2
avoidance_priority = 0.5

[node name="Timer" type="Timer" parent="MOTION"]
process_callback = 0
wait_time = 0.5
autostart = true

[node name="SightLine" type="RayCast2D" parent="MOTION"]
use_parent_material = true
target_position = Vector2(500, 0)

[connection signal="state_entered" from="StateChart/Root/Pursuit" to="." method="_on_pursuit_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Pursuit" to="." method="_on_pursuit_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Attack" to="." method="_on_attack_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Attack" to="." method="_on_attack_state_physics_processing"]
[connection signal="velocity_computed" from="MOTION/NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="MOTION/Timer" to="." method="_on_timer_timeout"]
